; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/avi/extr_avi.c_AVI_FourccGetCodec.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/avi/extr_avi.c_AVI_FourccGetCodec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLC_CODEC_UNKNOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AVI_FourccGetCodec(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %15 [
    i32 129, label %7
    i32 128, label %11
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @wf_tag_to_fourcc(i32 %8, i32* %5, i32* null)
  %10 = load i32, i32* %5, align 4
  store i32 %10, i32* %3, align 4
  br label %17

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @vlc_fourcc_GetCodec(i32 %12, i32 %13)
  store i32 %14, i32* %3, align 4
  br label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @VLC_CODEC_UNKNOWN, align 4
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %15, %11, %7
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @wf_tag_to_fourcc(i32, i32*, i32*) #1

declare dso_local i32 @vlc_fourcc_GetCodec(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
